--- a/css/theme/custom.css
+++ b/css/theme/custom.css
@@ -30,6 +30,11 @@ body {
   background: #737373;
   text-shadow: none; }
 
+::-moz-selection {
+  color: #fff;
+  background: #737373;
+  text-shadow: none; }
+
 .reveal .slides > section,
 .reveal .slides > section > section {
   line-height: 1.3;
@@ -48,7 +53,7 @@ body {
   color: #fff;
   font-family: "Open Sans", Helvetica, serif;
   font-weight: 400;
-  line-height: 2;
+  line-height: 1.2;
   letter-spacing: 0.15em;
   text-transform: none;
   text-shadow: none;
@@ -153,8 +158,7 @@ body {
   font-family: monospace;
   line-height: 1.2em;
   word-wrap: break-word;
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
-  background: #2D2D2D; }
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }
 
 .reveal code {
   font-family: monospace; }
@@ -232,7 +236,8 @@ body {
 .reveal section img {
   margin: 15px 0px;
   background: rgba(255, 255, 255, 0.12);
-  box-shadow: 5 5 40px rgba(0, 0, 0, 0.15); }
+  border: 4px solid #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
 
 .reveal section img.plain {
   border: 0;
@@ -246,7 +251,7 @@ body {
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
   border-color: #333;
-  box-shadow: 5 5 40px rgba(0, 0, 0, 0.55); }
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
 
 /*********************************************
  * NAVIGATION CONTROLS
