--- a/css/theme/default.css
+++ b/css/theme/default.css
@@ -1,36 +1,33 @@
 /**
- * Blood theme for reveal.js
- * Author: Walther http://github.com/Walther
+ * Custom Theme
  *
- * Designed to be used with highlight.js theme
- * "monokai_sublime.css" available from
- * https://github.com/isagalaev/highlight.js/
- *
- * For other themes, change $codeBackground accordingly.
- *
+ * @jesperorb
  */
-@import url(https://fonts.googleapis.com/css?family=Ubuntu:300,700,300italic,700italic);
+@import url(https://fonts.googleapis.com/css?family=Ubuntu:400,400i,700,700i);
+section.has-dark-background, section.has-dark-background h1, section.has-dark-background h2, section.has-dark-background h3, section.has-dark-background h4, section.has-dark-background h5, section.has-dark-background h6 {
+  color: #fff; }
+
 /*********************************************
  * GLOBAL STYLES
  *********************************************/
 body {
-  background: #222;
-  background-color: #222; }
+  background: #fff;
+  background-color: #fff; }
 
 .reveal {
-  font-family: Ubuntu, "sans-serif";
+  font-family: "Ubuntu", sans-serif;
   font-size: 40px;
   font-weight: normal;
-  color: #eee; }
+  color: #222; }
 
 ::selection {
   color: #fff;
-  background: #a23;
+  background: #c8b8c6;
   text-shadow: none; }
 
 ::-moz-selection {
   color: #fff;
-  background: #a23;
+  background: #c8b8c6;
   text-shadow: none; }
 
 .reveal .slides > section,
@@ -48,29 +45,29 @@ body {
 .reveal h5,
 .reveal h6 {
   margin: 0 0 20px 0;
-  color: #eee;
-  font-family: Ubuntu, "sans-serif";
-  font-weight: normal;
+  color: #222;
+  font-family: "Ubuntu", sans-serif;
+  font-weight: 600;
   line-height: 1.2;
-  letter-spacing: normal;
+  letter-spacing: 0.4rem;
   text-transform: uppercase;
-  text-shadow: 2px 2px 2px #222;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   word-wrap: break-word; }
 
 .reveal h1 {
-  font-size: 3.77em; }
+  font-size: 2.5em; }
 
 .reveal h2 {
-  font-size: 2.11em; }
+  font-size: 1.6em; }
 
 .reveal h3 {
-  font-size: 1.55em; }
+  font-size: 1.3em; }
 
 .reveal h4 {
   font-size: 1em; }
 
 .reveal h1 {
-  text-shadow: 0 1px 0 #ccc, 0 2px 0 #c9c9c9, 0 3px 0 #bbb, 0 4px 0 #b9b9b9, 0 5px 0 #aaa, 0 6px 1px rgba(0, 0, 0, 0.1), 0 0 5px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.2), 0 5px 10px rgba(0, 0, 0, 0.25), 0 20px 20px rgba(0, 0, 0, 0.15); }
+  text-shadow: none; }
 
 /*********************************************
  * OTHER
@@ -213,20 +210,20 @@ body {
  * LINKS
  *********************************************/
 .reveal a {
-  color: #a23;
+  color: #90708c;
   text-decoration: none;
   -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
   transition: color .15s ease; }
 
 .reveal a:hover {
-  color: #dd5566;
+  color: #b19baf;
   text-shadow: none;
   border: none; }
 
 .reveal .roll span:after {
   color: #fff;
-  background: #6a1520; }
+  background: #654e62; }
 
 /*********************************************
  * IMAGES
@@ -234,7 +231,7 @@ body {
 .reveal section img {
   margin: 15px 0px;
   background: rgba(255, 255, 255, 0.12);
-  border: 4px solid #eee;
+  border: 4px solid #222;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
 
 .reveal section img.plain {
@@ -248,7 +245,7 @@ body {
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
-  border-color: #a23;
+  border-color: #90708c;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
 
 /*********************************************
@@ -256,31 +253,31 @@ body {
  *********************************************/
 .reveal .controls .navigate-left,
 .reveal .controls .navigate-left.enabled {
-  border-right-color: #a23; }
+  border-right-color: #90708c; }
 
 .reveal .controls .navigate-right,
 .reveal .controls .navigate-right.enabled {
-  border-left-color: #a23; }
+  border-left-color: #90708c; }
 
 .reveal .controls .navigate-up,
 .reveal .controls .navigate-up.enabled {
-  border-bottom-color: #a23; }
+  border-bottom-color: #90708c; }
 
 .reveal .controls .navigate-down,
 .reveal .controls .navigate-down.enabled {
-  border-top-color: #a23; }
+  border-top-color: #90708c; }
 
 .reveal .controls .navigate-left.enabled:hover {
-  border-right-color: #dd5566; }
+  border-right-color: #b19baf; }
 
 .reveal .controls .navigate-right.enabled:hover {
-  border-left-color: #dd5566; }
+  border-left-color: #b19baf; }
 
 .reveal .controls .navigate-up.enabled:hover {
-  border-bottom-color: #dd5566; }
+  border-bottom-color: #b19baf; }
 
 .reveal .controls .navigate-down.enabled:hover {
-  border-top-color: #dd5566; }
+  border-top-color: #b19baf; }
 
 /*********************************************
  * PROGRESS BAR
@@ -289,27 +286,57 @@ body {
   background: rgba(0, 0, 0, 0.2); }
 
 .reveal .progress span {
-  background: #a23;
+  background: #90708c;
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
 
-.reveal p {
-  font-weight: 300;
-  text-shadow: 1px 1px #222; }
+.reveal section img {
+  border-radius: 10px;
+  max-height: 500px;
+  border: none;
+  box-shadow: 0 5 100px rgba(0, 0, 0, 0.1); }
 
-.reveal h1,
-.reveal h2,
-.reveal h3,
-.reveal h4,
-.reveal h5,
-.reveal h6 {
-  font-weight: 700; }
+.reveal pre {
+  border-radius: 10px;
+  box-shadow: 0 5px 100px rgba(0, 0, 0, 0.1); }
 
-.reveal p code {
-  background-color: #23241f;
+.reveal pre code {
+  overflow: visible;
+  padding: 0;
+  font-size: 1.5rem;
+  text-shadow: none;
+  max-height: 600px; }
+
+.reveal strong {
   display: inline-block;
-  border-radius: 7px; }
+  background-color: #90708c;
+  color: #fff;
+  font-style: normal;
+  padding: 5px 10px; }
 
-.reveal small code {
-  vertical-align: baseline; }
+.reveal h1 strong {
+  display: inline-block;
+  background-color: #90708c;
+  color: #fff;
+  font-style: normal;
+  padding: 5px 10px;
+  box-shadow: 1px 1px 0 #735a70, 2px 2px 0 #735a70, 3px 3px 0 #735a70, 4px 4px 0 #735a70; }
+
+.reveal em {
+  display: inline-block;
+  background-color: #395c6b;
+  color: #fff;
+  font-style: normal;
+  padding: 5px 10px; }
+
+.reveal .reference {
+  font-size: 1rem;
+  color: #222;
+  position: absolute;
+  bottom: -100;
+  left: 0; }
+
+.reveal p {
+  line-height: 1.5;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.2); }
