--- a/css/theme/league.css
+++ b/css/theme/league.css
@@ -18,15 +18,20 @@ body {
   background: -o-radial-gradient(center, circle cover, #555a5f 0%, #1c1e20 100%);
   background: -ms-radial-gradient(center, circle cover, #555a5f 0%, #1c1e20 100%);
   background: radial-gradient(center, circle cover, #555a5f 0%, #1c1e20 100%);
-  background-color: #3c9a8b; }
+  background-color: #2b2b2b; }
 
 .reveal {
-  font-family: "Lora", serif;
-  font-size: 36px;
+  font-family: "Lato", sans-serif;
+  font-size: 40px;
   font-weight: normal;
-  color: #fff; }
+  color: #eee; }
 
 ::selection {
+  color: #fff;
+  background: #FF5E99;
+  text-shadow: none; }
+
+::-moz-selection {
   color: #fff;
   background: #FF5E99;
   text-shadow: none; }
@@ -46,10 +51,10 @@ body {
 .reveal h5,
 .reveal h6 {
   margin: 0 0 20px 0;
-  color: #fff;
-  font-family: "Lora", serif;
+  color: #eee;
+  font-family: "League Gothic", Impact, sans-serif;
   font-weight: normal;
-  line-height: 2;
+  line-height: 1.2;
   letter-spacing: normal;
   text-transform: uppercase;
   text-shadow: 0px 0px 6px rgba(0, 0, 0, 0.2);
@@ -154,8 +159,7 @@ body {
   font-family: monospace;
   line-height: 1.2em;
   word-wrap: break-word;
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
-  background: #2D2D2D; }
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }
 
 .reveal code {
   font-family: monospace; }
@@ -212,20 +216,20 @@ body {
  * LINKS
  *********************************************/
 .reveal a {
-  color: #fff;
+  color: #13DAEC;
   text-decoration: none;
   -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
   transition: color .15s ease; }
 
 .reveal a:hover {
-  color: #cccccc;
+  color: #71e9f4;
   text-shadow: none;
   border: none; }
 
 .reveal .roll span:after {
   color: #fff;
-  background: #d9d9d9; }
+  background: #0d99a5; }
 
 /*********************************************
  * IMAGES
@@ -233,7 +237,8 @@ body {
 .reveal section img {
   margin: 15px 0px;
   background: rgba(255, 255, 255, 0.12);
-  box-shadow: 5 5 40px rgba(0, 0, 0, 0.15); }
+  border: 4px solid #eee;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
 
 .reveal section img.plain {
   border: 0;
@@ -246,39 +251,39 @@ body {
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
-  border-color: #fff;
-  box-shadow: 5 5 40px rgba(0, 0, 0, 0.55); }
+  border-color: #13DAEC;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
 
 /*********************************************
  * NAVIGATION CONTROLS
  *********************************************/
 .reveal .controls .navigate-left,
 .reveal .controls .navigate-left.enabled {
-  border-right-color: #fff; }
+  border-right-color: #13DAEC; }
 
 .reveal .controls .navigate-right,
 .reveal .controls .navigate-right.enabled {
-  border-left-color: #fff; }
+  border-left-color: #13DAEC; }
 
 .reveal .controls .navigate-up,
 .reveal .controls .navigate-up.enabled {
-  border-bottom-color: #fff; }
+  border-bottom-color: #13DAEC; }
 
 .reveal .controls .navigate-down,
 .reveal .controls .navigate-down.enabled {
-  border-top-color: #fff; }
+  border-top-color: #13DAEC; }
 
 .reveal .controls .navigate-left.enabled:hover {
-  border-right-color: #cccccc; }
+  border-right-color: #71e9f4; }
 
 .reveal .controls .navigate-right.enabled:hover {
-  border-left-color: #cccccc; }
+  border-left-color: #71e9f4; }
 
 .reveal .controls .navigate-up.enabled:hover {
-  border-bottom-color: #cccccc; }
+  border-bottom-color: #71e9f4; }
 
 .reveal .controls .navigate-down.enabled:hover {
-  border-top-color: #cccccc; }
+  border-top-color: #71e9f4; }
 
 /*********************************************
  * PROGRESS BAR
@@ -287,7 +292,7 @@ body {
   background: rgba(0, 0, 0, 0.2); }
 
 .reveal .progress span {
-  background: #fff;
+  background: #13DAEC;
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
