--- a/css/theme/night.css
+++ b/css/theme/night.css
@@ -14,11 +14,16 @@ body {
 
 .reveal {
   font-family: "Open Sans", sans-serif;
-  font-size: 30px;
+  font-size: 40px;
   font-weight: normal;
-  color: #fff; }
+  color: #eee; }
 
 ::selection {
+  color: #fff;
+  background: #e7ad52;
+  text-shadow: none; }
+
+::-moz-selection {
   color: #fff;
   background: #e7ad52;
   text-shadow: none; }
@@ -38,10 +43,10 @@ body {
 .reveal h5,
 .reveal h6 {
   margin: 0 0 20px 0;
-  color: #fff;
+  color: #eee;
   font-family: "Montserrat", Impact, sans-serif;
   font-weight: normal;
-  line-height: 2;
+  line-height: 1.2;
   letter-spacing: -0.03em;
   text-transform: none;
   text-shadow: none;
@@ -146,8 +151,7 @@ body {
   font-family: monospace;
   line-height: 1.2em;
   word-wrap: break-word;
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
-  background: #2D2D2D; }
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }
 
 .reveal code {
   font-family: monospace; }
@@ -225,7 +229,8 @@ body {
 .reveal section img {
   margin: 15px 0px;
   background: rgba(255, 255, 255, 0.12);
-  box-shadow: 5 5 40px rgba(0, 0, 0, 0.15); }
+  border: 4px solid #eee;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
 
 .reveal section img.plain {
   border: 0;
@@ -239,7 +244,7 @@ body {
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
   border-color: #e7ad52;
-  box-shadow: 5 5 40px rgba(0, 0, 0, 0.55); }
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
 
 /*********************************************
  * NAVIGATION CONTROLS
