--- a/css/theme/php.css
+++ b/css/theme/php.css
@@ -26,6 +26,11 @@ body {
   background: #709fb3;
   text-shadow: none; }
 
+::-moz-selection {
+  color: #fff;
+  background: #709fb3;
+  text-shadow: none; }
+
 .reveal .slides > section,
 .reveal .slides > section > section {
   line-height: 1.3;
@@ -44,7 +49,7 @@ body {
   color: #222;
   font-family: "Open Sans", Helvetica, sans-serif;
   font-weight: 600;
-  line-height: 2;
+  line-height: 1.2;
   letter-spacing: normal;
   text-transform: uppercase;
   text-shadow: none;
@@ -149,8 +154,7 @@ body {
   font-family: monospace;
   line-height: 1.2em;
   word-wrap: break-word;
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
-  background: #2D2D2D; }
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }
 
 .reveal code {
   font-family: monospace; }
@@ -228,7 +232,8 @@ body {
 .reveal section img {
   margin: 15px 0px;
   background: rgba(255, 255, 255, 0.12);
-  box-shadow: 5 5 40px rgba(0, 0, 0, 0.15); }
+  border: 4px solid #222;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
 
 .reveal section img.plain {
   border: 0;
@@ -242,7 +247,7 @@ body {
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
   border-color: #395c6b;
-  box-shadow: 5 5 40px rgba(0, 0, 0, 0.55); }
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
 
 /*********************************************
  * NAVIGATION CONTROLS
