--- a/css/theme/sky.css
+++ b/css/theme/sky.css
@@ -23,11 +23,16 @@ body {
 
 .reveal {
   font-family: "Open Sans", sans-serif;
-  font-size: 36px;
+  font-size: 40px;
   font-weight: normal;
   color: #333; }
 
 ::selection {
+  color: #fff;
+  background: #134674;
+  text-shadow: none; }
+
+::-moz-selection {
   color: #fff;
   background: #134674;
   text-shadow: none; }
@@ -50,7 +55,7 @@ body {
   color: #333;
   font-family: "Quicksand", sans-serif;
   font-weight: normal;
-  line-height: 2;
+  line-height: 1.2;
   letter-spacing: -0.08em;
   text-transform: uppercase;
   text-shadow: none;
@@ -155,8 +160,7 @@ body {
   font-family: monospace;
   line-height: 1.2em;
   word-wrap: break-word;
-  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.3);
-  background: #2D2D2D; }
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3); }
 
 .reveal code {
   font-family: monospace; }
@@ -234,7 +238,8 @@ body {
 .reveal section img {
   margin: 15px 0px;
   background: rgba(255, 255, 255, 0.12);
-  box-shadow: 5 5 40px rgba(0, 0, 0, 0.15); }
+  border: 4px solid #333;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); }
 
 .reveal section img.plain {
   border: 0;
@@ -248,7 +253,7 @@ body {
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
   border-color: #3b759e;
-  box-shadow: 5 5 40px rgba(0, 0, 0, 0.55); }
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
 
 /*********************************************
  * NAVIGATION CONTROLS
